--- a/.github/workflows/push_ishikawa_data.yml
+++ b/.github/workflows/push_ishikawa_data.yml
@@ -3,7 +3,7 @@ name: 福井県のデータをGitHubへPush
 on:
   repository_dispatch:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '*/15 * * * *'
     # - cron: '* * * * *'
 
 jobs:
