--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
           
       - name: Enable "include administrators" branch protection
         uses: benjefferies/branch-protection-bot@master
-        if: always()  # Force to always run this step to ensure "include administrators" is always turned back on
+        if: always()
         with:
           access-token: ${{ secrets.ACCESS_TOKEN }}
           owner: tokyo-metropolitan-gov
