--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git config --local user.email "avocado0501@gmail.com"
           git config --local user.name "kulvon BOT"
-          git status | grep modified && git add data && git commit -v -m "[Bot] GitHub Actions - auto run"\
+          git status | grep modified && git add data && git commit -m "[Bot] GitHub Actions - auto run"\
             || true
 
       - name: Push changes
