--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev-no-axe": "cross-env NODE_ENV=dev-no-axe GENERATE_ENV=development nuxt-ts",
     "build": "nuxt-ts build",
     "start": "cross-env NODE_ENV=production nuxt-ts start",
+    "release": "yarn build && yarn start",
     "generate:deploy": "cross-env GENERATE_ENV=production nuxt-ts generate",
     "generate:dev": "cross-env GENERATE_ENV=development nuxt-ts generate",
     "generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
