--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Commit files
         run: |
           git config --local user.email "avocado0501@gmail.com"
-          git config --local user.name "kulvon BOT"
+          git config --local user.name "kulvon"
           git status | grep modified && git add data && git commit -m "[Bot] GitHub Actions - auto run"\
             || true
 
