--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,8 +27,7 @@ jobs:
         run: |
           git config --local user.email "avocado0501@gmail.com"
           git config --local user.name "kulvon"
-          git status | grep modified && git add data && git commit -m "[Bot] GitHub Actions - auto run"\
-            || true
+          git status | grep modified && git add data && git commit -m "[Bot] GitHub Actions - auto run"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
