--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "node": ">=10.19.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development GENERATE_ENV=development nuxt-ts",
+    "cp:data": "./bin/cp_data.sh",
+    "dev:orig": "cross-env NODE_ENV=development nuxt-ts",
+    "dev": "yarn cp:data && yarn dev:orig",
     "dev-no-axe": "cross-env NODE_ENV=dev-no-axe GENERATE_ENV=development nuxt-ts",
     "build": "nuxt-ts build",
     "start": "cross-env NODE_ENV=production nuxt-ts start",
     "release": "yarn build && yarn start",
-    "generate:deploy": "cross-env GENERATE_ENV=production nuxt-ts generate",
+    "generate:deploy": "yarn cp:data && yarn generate:deploy:orig",
+    "generate:deploy:orig": "nuxt-ts generate",
     "generate:dev": "cross-env GENERATE_ENV=development nuxt-ts generate",
     "generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
     "lint-and-generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
