--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-18.04
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: master
 
       - name: Setup Node
         uses: actions/setup-node@v1
@@ -29,28 +25,14 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      
+
       - run: yarn install --frozen-lockfile
       - run: yarn run test
-      - name: generate
-        run: |
-          yarn run generate:deploy --fail-on-page-error
+      - run: yarn run generate:deploy --fail-on-page-error
 
-      # - name: Temporarily disable "include administrators" branch protection
-      #   uses: benjefferies/branch-protection-bot@master
-      #   if: always()
-      #   with:
-      #     access-token: ${{ secrets.ACCESS_TOKEN }}
-      #     branch: production
-
-      - name: Deploy
+      - name: deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           publish_branch: production
-
-      # - name: Create GitHub release
-      #   uses: rymndhng/release-on-push-action@master
-      #   with:
-      #     bump_version_scheme: patch
