--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "nuxt-ts build",
     "start": "cross-env NODE_ENV=production nuxt-ts start",
     "release": "yarn build && yarn start",
-    "generate:deploy": "yarn cp:data && yarn generate:deploy:orig",
+    "_generate:deploy": "yarn cp:data && yarn generate:deploy:orig",
+    "generate:deploy": "cross-env GENERATE_ENV=production nuxt-ts generate",
     "generate:deploy:orig": "nuxt-ts generate",
     "generate:dev": "cross-env GENERATE_ENV=development nuxt-ts generate",
     "generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
