--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,9 @@ name: production deploy
 on:
   repository_dispatch:
     types: [build_application]
+  push:
+    branches:
+      - master
 
 jobs:
   deploy:
