--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   schedule:
-    - cron: "*/20 0-15,21-23 * * *"
+    - cron: "*/25 0-15,21-23 * * *"
 
 jobs:
   build-run-deploy:
@@ -27,7 +27,12 @@ jobs:
         run: |
           git config --local user.email "avocado0501@gmail.com"
           git config --local user.name "kulvon"
-          git status | grep modified && git add data && git commit -m "[Bot] GitHub Actions - auto run"\
+          git status | grep modified && git add data && git commit -v -m "[Bot] GitHub Actions - auto run" \
+          && curl -X POST \
+            --header "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
+              --header "Accept: application/vnd.github.everest-preview+json" \
+              --header "Content-Type: application/json" \
+              https://api.github.com/repos/kulvon/covid-test/dispatches --data '{"event_type": "build_application"}' \
             || true
 
       - name: Push changes
