--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,42 +1,43 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+# name: Node.js CI
 
-on:
-  schedule:
-    - cron: "*/50 0-15,21-23 * * *"
+# on:
+#   schedule:
+#     - cron: "*/50 0-15,21-23 * * *"
 
-jobs:
-  build-run-deploy:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
+# jobs:
+#   build-run-deploy:
+#     runs-on: ubuntu-18.04
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
+#       - uses: actions/setup-node@v1
+#         with:
+#           node-version: 12.x
 
-      - name: Build & Run
-        run: |
-          npm install -g yarn
-          yarn
-          yarn fetch
+#       - name: Build & Run
+#         run: |
+#           npm install -g yarn
+#           yarn
+#           yarn fetch
 
-      - name: Commit files
-        run: |
-          git config --local user.email "avocado0501@gmail.com"
-          git config --local user.name "kulvon"
-          git status | grep modified && git add data && git commit -v -m "[Bot] GitHub Actions - auto run" \
-          && curl -X POST \
-            --header "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
-              --header "Accept: application/vnd.github.everest-preview+json" \
-              --header "Content-Type: application/json" \
-              https://api.github.com/repos/kulvon/covid-test/dispatches --data '{"event_type": "build_application"}' \
-            || true
+#       - name: Commit files
+#         run: |
+#           git config --local user.email "avocado0501@gmail.com"
+#           git config --local user.name "kulvon"
+#           git status | grep modified && git add data && git commit -v -m "[Bot] GitHub Actions - auto run" \
+#           && curl -X POST \
+#             --header "Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}" \
+#               --header "Accept: application/vnd.github.everest-preview+json" \
+#               --header "Content-Type: application/json" \
+#               https://api.github.com/repos/kulvon/covid-test/dispatches --data '{"event_type": "build_application"}' \
+#             || true
 
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
+#       - name: Push changes
+#         uses: ad-m/github-push-action@master
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           branch: main
+
